[NG] Fixes signpost issue affectingn datagrid row height - Adds detection to DatagridCell for Signpost's - Adds style to ensure Signpost doesn't change the height of the row - Adds transparent bg to .signpost-content and moves -white to .signpost-flex-wrap - Adds DatagridCell spec for DatagridSignpost style class use cases - closes #1098

--- a/src/clarity-angular/data/datagrid/_datagrid.clarity.scss
+++ b/src/clarity-angular/data/datagrid/_datagrid.clarity.scss
@@ -373,6 +373,11 @@
             vertical-align: bottom;
         }
 
+        .datagrid-signpost-trigger {
+            height: $clr_baselineRem_1_5 - 1;
+            padding: 0 12px 0;
+        }
+
         .datagrid-expandable-caret {
             $horizontalPadding: ($clr-datagrid-fixed-column-size - $clr_baselineRem_1_25) / 2;
             padding: ($clr_baselineRem_0_125 - 1) $horizontalPadding $clr_baselineRem_0_125;
